<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Activent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_event_list">Events</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="event_delete">Delete</string>
    <string name="event_share">Share</string>
    <string name="event_time_arrow">→</string>
    <string name="home_screen_no_activity">No Events happening right now!</string>
    <string name="home_screen_check_agenda">Check your agenda for next event</string>
    <string name="home_tile_sign_in">Sign in</string>
    <string name="home_tile_agenda">Agenda</string>
    <string name="home_tile_places">Places</string>
    <string name="home_tile_info">Info</string>
    <string name="home_top_currently_happening">Currently Happening</string>
    <string name="dummy_text_place">C01</string>
    <string name="dummy_text_day">THU 9 NOV</string>
    <string name="dummy_text_time">9:30 PM</string>
    <string name="event_happening_at">Happening at</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Preference Strings -->
    <string name="preference_file_key">com.agnostix.activent.activent.pref_keys_main</string>
    <string name="pref_key_username">pref_key_username</string>
    <string name="pref_key_email">pref_key_email</string>
    <string name="pref_key_db_exist">pref_key_db_exist</string>
    <string name="title_activity_places">Places</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_mails">Mails</string>

</resources>
