<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10sp"
    android:layout_height="match_parent"
    android:background="@drawable/home_current_item_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/home_top_currently_happening"
        android:textAllCaps="true"
        android:textSize="10sp"
        android:textColor="@color/home_current_currently_happening"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7">

        <TextView
            android:id="@+id/home_current_event_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:capitalize="characters"
            android:textStyle="bold"
            android:textColor="@color/home_current_place"
            android:text="@string/dummy_text_place"/>

        <TextView
            android:id="@+id/home_current_event_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:gravity="right"
            android:layout_weight="5"
            android:paddingRight="10sp"
            android:textStyle="bold"
            android:textColor="@color/home_current_day"
            android:text="@string/dummy_text_day"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/home_current_event_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp"
            android:textColor="@color/home_current_title"
            android:textSize="@dimen/event_detail_block_title"
            android:text="@string/hello_world"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:id="@+id/home_current_event_start_time"
            android:textColor="@color/home_current_start"
            android:textSize="@dimen/event_detail_block_start_time"
            android:typeface="normal"
            android:gravity="right"
            android:text="@string/dummy_text_time"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/event_time_arrow"
            android:textColor="@color/home_current_end"
            android:typeface="normal"
            android:textSize="@dimen/event_detail_block_time_arrow"
            android:text="@string/event_time_arrow"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:id="@+id/home_current_event_end_time"
            android:textColor="@color/home_current_end"
            android:typeface="normal"
            android:gravity="left"
            android:textSize="@dimen/event_detail_block_end_time"
            android:text="@string/dummy_text_time"/>
    </LinearLayout>
</LinearLayout>