<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/event_detail"
    style="?android:attr/textAppearanceLarge" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="16dp" android:textIsSelectable="true"
    android:layout_margin="10dp" android:orientation="vertical" tools:context="com.agnostix.activent.activent.EventDetailFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/event_block_rounded"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_timestamp"
            android:layout_marginLeft="10sp"
            android:textColor="@color/event_detail_light_grey"
            android:textStyle="bold"
            android:typeface="monospace"
            android:textSize="@dimen/event_detail_block_timestamp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_title"
            android:layout_marginLeft="10sp"
            android:textSize="@dimen/event_detail_block_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/event_start_time"
                android:textColor="@color/event_detail_light_grey"
                android:textSize="@dimen/event_detail_block_start_time"
                android:typeface="normal"
                android:gravity="right"
                android:text="@string/dummy_text_time"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/event_time_arrow"
                android:textColor="@color/event_detail_light_grey"
                android:typeface="normal"
                android:textSize="@dimen/event_detail_block_time_arrow"
                android:text="@string/event_time_arrow"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/event_end_time"
                android:textColor="@color/event_detail_light_grey"
                android:typeface="normal"
                android:gravity="left"
                android:textSize="@dimen/event_detail_block_end_time"
                android:text="@string/dummy_text_time"/>
            </LinearLayout>
        </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/event_block_rounded"
        android:padding="10dp"
        android:layout_marginTop="10sp">

        <TextView
            android:id="@+id/event_happening_at_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/event_happening_at"
            android:textAllCaps="true"/>
        <ImageView
            android:id="@+id/event_place_img"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginTop="5sp"
            android:layout_below="@id/event_happening_at_text"
            android:src="@drawable/bg_image"
            android:scaleType="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_place"
            android:textSize="30sp"
            android:text="@string/dummy_text_place"
            android:layout_alignLeft="@id/event_place_img"
            android:layout_alignRight="@id/event_place_img"
            android:layout_alignBottom="@id/event_place_img"
            android:layout_alignTop="@id/event_place_img"
            android:gravity="center"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10.0"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/event_delete"
                android:text="@string/event_delete"
                android:capitalize="words"
                android:background="@drawable/rounded_block_trash"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/event_share"
                android:text="@string/event_share"
                android:capitalize="words"
                android:background="@drawable/rounded_block_share"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            </LinearLayout>
    </LinearLayout>
